Adding load static file into the template

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load socialaccount %}
 {% load i18n %}
-
+{% load static %}
 
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
