--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -7,7 +7,18 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1> Welcome to the Saas Procurement App</h1>
+    <h1> Welcome {{user}}!</h1>
+    What do you want to do today?
+    <form>
+      <div class="mb-3">
+        <select class="form-select form-select-sm" aria-label="Default workflow">
+          <option selected>Open this select menu</option>
+          <option value="1">Fill out a Saas Request</option>
+          <option value="2">Approve a Saas Request</option>
+          <option value="3">Three</option>
+        </select>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
