--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -7,7 +7,18 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1> Welcome to the Saas Procurement App</h1>
+    <h1> Welcome {{user}}!</h1>
+    <p>What do you want to do today?</p></br>
+    <div class="card">
+      <div class="card-header">
+        Submit a SAAS Request
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Software as a Service Request Form</h5>
+        <p class="card-text">Please fill out this form if you would like to request the purchase of an unclassified software subscription service.</p>
+        <a href="submit_request" class="btn btn-primary">Start</a>
+      </div>
+    </div>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
