Adding models for the form and the user. Added unit tests as well plus a new user app

--- a/saas_app/templates/thanks.html
+++ b/saas_app/templates/thanks.html
@@ -7,4 +7,6 @@
 
 {% block content %}
     <h1>Thank you for submitting the Software as a Service Request Form!</h1>
+    <p>This is the overall process that can be expected.</p>
+    <img src="{% static 'saas_app/img/saas_process.png' %}" alt="Saas Process" width="700">
 {% endblock %}
