Adding files for displaying the list of requests submitted by the user

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -19,6 +19,17 @@
         <a href="submit_request" class="btn btn-primary">Start</a>
       </div>
     </div>
+    <br>
+    <div class="card">
+      <div class="card-header">
+        View requests
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">View your submitted requests</h5>
+        <p class="card-text">Click here to view all of your submitted SAAS requests.</p>
+        <a href="view_request" class="btn btn-primary">Start</a>
+      </div>
+    </div>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
