Fixing up any files that have failed linting and formatting

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -27,7 +27,7 @@
       <div class="card-body">
         <h5 class="card-title">View your submitted requests</h5>
         <p class="card-text">Click here to view all of your submitted SAAS requests.</p>
-        <a href="view_request" class="btn btn-primary">Start</a>
+        <a href="submit_request/view" class="btn btn-primary">Start</a>
       </div>
     </div>
 {% else %}
