--- a/saas_app/templates/view_all_requests.html
+++ b/saas_app/templates/view_all_requests.html
@@ -42,4 +42,5 @@
             {% endfor %}
           </tbody>
     </table>
+    <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">Cancel</button>
 {% endblock %}
