Changes necessary for the approver app to work

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -38,7 +38,7 @@
       <div class="card-body">
         <h5 class="card-title">Approve/Deny requests</h5>
         <p class="card-text">Click here to approve/deny existing requests or request more information.</p>
-        <a href="submit_request/view" class="btn btn-primary">Start</a>
+        <a href="approve/view" class="btn btn-primary">Start</a>
       </div>
     </div>
 {% else %}
