--- a/saas_app/templates/request/view_all_requests.html
+++ b/saas_app/templates/request/view_all_requests.html
@@ -8,7 +8,7 @@
 {% block content %}
     <h1>Submitted Requests</h1>
     <p>This is the list of requests that you have submitted. Click on the request name to view more information.</p>
-    <p>Note: You can only modify requests that have not been approved.</p><br>
+    <p>Note: You can only modify requests that have not yet been reviewed.</p><br>
     <table class="table table-hover table-bordered">
         <thead>
             <tr>
@@ -17,14 +17,14 @@
               <th scope="col">Url</th>
               <th scope="col">Cost</th>
               <th scope="col">Date Submitted</th>
-              <th scope="col">Approved?</th>
+              <th scope="col">Status</th>
               <tbody class="table-group-divider"></tbody>
             </tr>
           </thead>
           <tbody>
             {% for request in submitted_requests %}
             <tr>
-                {% if request.approved == False %}
+                {% if request.date_reviewed == None %}
                 	<td><a href="/submit_request/view/{{request.pk}}">{{ request.name}} </a></td>
                 {% else %}
                 	<td>{{ request.name}}</td>
@@ -34,9 +34,14 @@
                 <td>{{ request.cost }}</td>
                 <td>{{ request.date_submitted }}</td>
                 {% if request.approved == True %}
-                	<td>Yes</td>
+                	<td>Approved</td>
+                {% elif request.denied == True %}
+                	<td>Denied</td>
+                {% elif request.date_reviewed == None %}
+                	<td>Review pending</td>
                 {% else %}
-                	<td>No</td>
+                  <td>Status unknown</td>
+
                 {% endif %}
             </tr>
             {% endfor %}
