--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -30,6 +30,17 @@
         <a href="submit_request/view" class="btn btn-primary">Start</a>
       </div>
     </div>
+    <br>
+    <div class="card">
+      <div class="card-header">
+        Approve/Deny
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Approve/Deny requests</h5>
+        <p class="card-text">Click here to approve/deny existing requests or request more information.</p>
+        <a href="approve/view" class="btn btn-primary">Start</a>
+      </div>
+    </div>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
