Adding changes for manager addition and role

--- a/saas_app/templates/approve/view_all_requests.html
+++ b/saas_app/templates/approve/view_all_requests.html
@@ -6,18 +6,18 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-    <h1>SAAS requests awaiting approval</h1>
-    <p> List of requests awaiting approval</p>
-    <h3>Requests where you flagged as the approver</h2>
-    <table class="table table-hover table-bordered">
-      <thead>
+  <h1>SAAS requests awaiting approval</h1>
+    {% if user_approval_needed_requests %}
+      <p> List of requests awaiting approval</p>
+      <table class="table table-hover table-bordered">
+        <thead>
           <tr>
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Url</th>
             <th scope="col">Cost</th>
             <th scope="col">Date Submitted</th>
-            <th scope="col">Approver</th>
+            <th scope="col">Manager</th>
             <th scope="col">Status</th>
             <tbody class="table-group-divider"></tbody>
           </tr>
@@ -30,22 +30,25 @@
               <td>{{ saas_request.url }}</td>
               <td>{{ saas_request.cost }}</td>
               <td>{{ saas_request.date_submitted }}</td>
-              <td>{{ saas_request.approver }}</td>
-              {% if saas_request.approved == True %}
-                <td>Approved</td>
-              {% elif saas_request.denied == True %}
-                <td>Denied</td>
-              {% elif saas_request.date_reviewed == None %}
-                <td>Review pending</td>
+              <td>{{ saas_request.manager }}</td>
+              {% if saas_request.manager_approved == True %}
+                <td>Manager approved</td>
+              {% elif saas_request.manager_denied == True %}
+                <td>Manager denied</td>
+              {% elif saas_request.date_manager_reviewed == None %}
+                <td>Manager review pending</td>
               {% else %}
                 <td>Status unknown</td>
               {% endif %}
           </tr>
           {% endfor %}
         </tbody>
-  </table>
-  <br>
-  <h3>Requests where you are not the approver</h2>
+    </table>
+    <br>
+    {% else %}
+      <h4> You have no requests awaiting approval</h4><br>
+    {% endif %}
+ <h4>Requests that have been previously reviewed by you</h4>
   <table class="table table-hover table-bordered">
     <thead>
         <tr>
@@ -54,7 +57,7 @@
           <th scope="col">Url</th>
           <th scope="col">Cost</th>
           <th scope="col">Date Submitted</th>
-          <th scope="col">Approver</th>
+          <th scope="col">Manager</th>
           <th scope="col">Status</th>
           <tbody class="table-group-divider"></tbody>
         </tr>
@@ -62,24 +65,24 @@
       <tbody>
         {% for saas_request in all_approval_needed_requests %}
             <tr>
-            <td><a href="/approve/view/{{saas_request.pk}}">{{ saas_request.name}} </a></td>
+            <td>{{ saas_request.name}} </td>
             <td>{{ saas_request.description }}</td>
             <td>{{ saas_request.url }}</td>
             <td>{{ saas_request.cost }}</td>
             <td>{{ saas_request.date_submitted }}</td>
-            <td>{{ saas_request.approver }}</td>
-            {% if saas_request.approved == True %}
-              <td>Approved</td>
-            {% elif saas_request.denied == True %}
-              <td>Denied</td>
-            {% elif saas_request.date_reviewed == None %}
-              <td>Review pending</td>
+            <td>{{ saas_request.manager }}</td>
+            {% if saas_request.manager_approved == True %}
+              <td>Manager approved</td>
+            {% elif saas_request.manager_denied == True %}
+              <td>Manager denied</td>
+            {% elif saas_request.date_manager_reviewed == None %}
+              <td>Manager review pending</td>
             {% else %}
               <td>Status unknown</td>
             {% endif %}
         </tr>
         {% endfor %}
-      </tbody>
+      </tbody> 
 </table>
     <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">Cancel</button>
 {% endblock %}
