--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -33,14 +33,15 @@
     <br>
     <div class="card">
       <div class="card-header">
-        Approve/Deny
+        Manager Approve/Deny
       </div>
       <div class="card-body">
-        <h5 class="card-title">Approve/Deny requests</h5>
-        <p class="card-text">Click here to approve/deny existing requests or request more information.</p>
+        <h5 class="card-title">Manager - Approve/Deny requests</h5>
+        <p class="card-text">For manager, click here to approve/deny existing requests.</p>
         <a href="approve/view" class="btn btn-primary">Start</a>
       </div>
     </div>
+    <br>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
