--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -42,6 +42,17 @@
       </div>
     </div>
     <br>
+     <div class="card">
+      <div class="card-header">
+        Internal Ops
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">View requests</h5>
+        <p class="card-text">For internal ops, click here to view requests, select S32 approver or record a purchase.</p>
+        <a href="internal_ops/view" class="btn btn-primary">Start</a>
+      </div>
+    </div>
+    <br>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
