--- a/saas_app/templates/request/view_all_requests.html
+++ b/saas_app/templates/request/view_all_requests.html
@@ -24,7 +24,7 @@
           <tbody>
             {% for request in submitted_requests %}
             <tr>
-                {% if request.status == "Request submitted" %}
+                {% if request.status == "Form submitted by user" %}
                 	<td><a href="/submit_request/view/{{request.pk}}">{{ request.name}} </a></td>
                 {% else %}
                 	<td>{{ request.name}}</td>
