--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -70,7 +70,7 @@
 
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" href="{% url 'socialaccount_connections' %}">Google Accounts <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
