--- a/saas_app/templates/internal_ops/view_all_requests.html
+++ b/saas_app/templates/internal_ops/view_all_requests.html
@@ -6,9 +6,9 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-  <h1>SAAS requests awaiting approval</h1>
-    {% if user_approval_needed_requests %}
-      <p> List of requests awaiting approval</p>
+  <h1>SAAS requests awaiting s32 approval</h1>
+    {% if s32_approval_needed_requests %}
+      <p> List of requests waiting to be sent for s32 approval</p>
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
@@ -23,9 +23,9 @@
           </tr>
         </thead>
         <tbody>
-        {% for saas_request in user_approval_needed_requests %}
+        {% for saas_request in s32_approval_needed_requests %}
              <tr>
-              <td><a href="/approve/view/{{saas_request.pk}}">{{ saas_request.name}} </a></td>
+              <td><a href="/internal_ops/view/{{saas_request.pk}}">{{ saas_request.name}} </a></td>
               <td>{{ saas_request.description }}</td>
               <td>{{ saas_request.url }}</td>
               <td>{{ saas_request.cost }}</td>
@@ -40,7 +40,8 @@
     {% else %}
       <h4> You have no requests awaiting approval</h4><br>
     {% endif %}
- <h4>Requests that have been previously reviewed by you</h4>
+{% if purchase_needed_requests %}
+ <h4>Requests that have been s32 approved awaiting purchase</h4>
   <table class="table table-hover table-bordered">
     <thead>
         <tr>
@@ -55,7 +56,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for saas_request in all_approval_needed_requests %}
+        {% for saas_request in purchase_needed_requests %}
             <tr>
             <td>{{ saas_request.name}} </td>
             <td>{{ saas_request.description }}</td>
@@ -68,5 +69,40 @@
         {% endfor %}
       </tbody> 
 </table>
+{% else %}
+  <h4> You have no requests awaiting purchase</h4><br>
+{% endif %}
+{% if s32_approval_waiting_requests %}
+ <h4>Requests that have been sent to the S32 approver and are awaiting approval</h4>
+  <table class="table table-hover table-bordered">
+    <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+          <th scope="col">Url</th>
+          <th scope="col">Cost</th>
+          <th scope="col">Date Submitted</th>
+          <th scope="col">Manager</th>
+          <th scope="col">Status</th>
+          <tbody class="table-group-divider"></tbody>
+        </tr>
+      </thead>
+      <tbody>
+        {% for saas_request in s32_approval_waiting_requests %}
+            <tr>
+            <td>{{ saas_request.name}} </td>
+            <td>{{ saas_request.description }}</td>
+            <td>{{ saas_request.url }}</td>
+            <td>{{ saas_request.cost }}</td>
+            <td>{{ saas_request.date_submitted }}</td>
+            <td>{{ saas_request.manager }}</td>
+            <td>{{ saas_request.status }}</td>
+        </tr>
+        {% endfor %}
+      </tbody> 
+</table>
+{% else %}
+  <h4> You have no requests that are awaiting to be approved by the S32 approver</h4><br>
+{% endif %}
     <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">Cancel</button>
 {% endblock %}
