Adding search functionality to the app

--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -77,8 +77,8 @@
                     <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
                   </li>
                 </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <form name="search" class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
+                <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
               </form>
             </div>
