--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -53,6 +53,16 @@
       </div>
     </div>
     <br>
+    <div class="card">
+      <div class="card-header">
+        S32 Approver
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">View requests</h5>
+        <p class="card-text">For S32 Approver - click here to approve or deny requests.</p>
+        <a href="approve/view_s32" class="btn btn-primary">Start</a>
+      </div>
+    </div>
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
     <p>{% blocktrans %}You are about to use your Google account to login to
