--- a/saas_app/templates/approve/view_request.html
+++ b/saas_app/templates/approve/view_request.html
@@ -25,16 +25,17 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="{% url 'approve:send_email' %}"" method="post" novalidate>
+        <form action="/approve/send_email/" method="post" novalidate>
+        {% csrf_token %}
           <div class="form-group">
             <label for="message-text" class="col-form-label">Message:</label>
             <textarea class="form-control" id="message-text" rows="7"></textarea>
           </div>
+          <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary" name="submit" Value="Submit">Send message</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
       </div>
     </div>
   </div>
@@ -46,7 +47,7 @@
     var recipient = "{{ form.submitted_by__email }}"
     // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
     var modal = $(this)
-    modal.find('.modal-title').text('New message to ' + recipient)
+    modal.find('.modal-title').text('New message to requestor')
     modal.find('.modal-body input').val(recipient)
   })
   </script>
