--- a/saas_app/templates/internal_ops/view_request.html
+++ b/saas_app/templates/internal_ops/view_request.html
@@ -14,29 +14,6 @@
         {% csrf_token %}
         {% crispy form %}
 </form>
-{% comment %} <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> {% endcomment %}
-
-<!-- Modal -->
-<div class="modal fade" id="confirm_save_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="modal fade" id="request_info_modal" tabindex="-1" aria-labelledby="request_info_label" aria-hidden="true">
   <div class="modal-dialog">
@@ -49,15 +26,16 @@
       </div>
       <div class="modal-body">
         <form action="{% url 'approve:send_email' %}"" method="post" novalidate>
+          {% csrf_token %}
           <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
+            <label for="message-text" class="col-form-label">Message to be sent:</label>
             <textarea class="form-control" id="message-text" rows="7"></textarea>
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-primary">Send message now</button>
       </div>
     </div>
   </div>
