--- a/saas_app/templates/internal_ops/view_request.html
+++ b/saas_app/templates/internal_ops/view_request.html
@@ -14,31 +14,8 @@
         {% csrf_token %}
         {% crispy form %}
 </form>
-{% comment %} <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> {% endcomment %}
 
-<!-- Modal -->
-<div class="modal fade" id="confirm_save_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="request_info_modal" tabindex="-1" aria-labelledby="request_info_label" aria-hidden="true">
+ <div class="modal fade" id="request_info_modal" tabindex="-1" aria-labelledby="request_info_label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -48,16 +25,17 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="{% url 'approve:send_email' %}"" method="post" novalidate>
+        <form action="send_mail" method="post" novalidate>
           <div class="form-group">
+            {% csrf_token %}
             <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text" rows="7"></textarea>
+            <textarea class="form-control" name="info_requested" id="message-text" rows="7"></textarea>
+          </div>
+          <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary" name="submit" Value="Submit">Send message</button>
           </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
       </div>
     </div>
   </div>
@@ -66,11 +44,11 @@
 <script>
   $('#request_info_modal').on('show.bs.modal', function (event) {
     var button = $(event.relatedTarget) // Button that triggered the modal
-    var recipient = "{{ form.submitted_by__email }}"
+    var recipient = "SAAS requestor"
     // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
     var modal = $(this)
-    modal.find('.modal-title').text('New message to ' + recipient)
+    modal.find('.modal-title').text('New message to requestor')
     modal.find('.modal-body input').val(recipient)
   })
-  </script>
+  </script> 
 {% endblock %}
